# crewai-ejentum

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
src/crewai_ejentum/: __init__.py  schemas.py  tool.py
tests/: test_tool.py
